traversal.snake.Snake.scala.error
Compilation error:
Snake:23: error: Unmatched closing brace '}' ignored here
}
^