traversal.snake.Snake.scala.code
override def run() {
  baisseBrosse()
  var x = true
  while(x){
    avance()
      if(getDirection() == Direction.EST && !estFaceMur()){
        gauche()
          avance()
        	gauche()
      }else{
        droite()
          avance()
        	droite()  	
    		}	
  		}
    if(getCouleurSol() == Color.red){
      x = false
    }
  }
 droite() 
}